--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-* {
+ {
     font-family: 'Roboto Mono', monospace;
 }
 
@@ -38,21 +38,27 @@ body footer {
     margin-top: 1.5em;
 
 }
-#section2 ul {
-    margin-left: 17em;
-    font-size: large;
 
-}
 #section2 {
     margin-left: 1.5em;
+    background-color: rgb(125, 150, 204);
+    width: fit-content;
+    }
+#section2 ul {
+    margin-left: 1em;
+    font-size: large;
+    font-weight: lighter;
     display: inline-block;
-    position: relative;
+}
+
+li {
+    margin-top: .5em;
+    margin-bottom: .5em;
 }
 
 #section3 {
-    margin-left: 14em;
-    margin-top: 5em;
-    margin-top: 4em;
+    margin-left: 18em;
+    margin-top: -20em;
     font-size: large;
     display: inline-block;
     position: relative;
@@ -60,25 +66,21 @@ body footer {
 
 
 
-#section2 ul li img {
-    position: relative;
-    float:right;
-    width: 200px;
-    height: 200px;
-    aspect-ratio: 50%;
-    margin-left: 2em;
+
+ #images {
+    margin-left: 20em;
     text-align: center;
-    display: inline-block;
-    border: black;
-    border-style: solid;
-}
+  }
+  
+ #images img {
+     float: right;
+     position: relative;
+     border: black;
+     border-style: solid;
+     width: 10em;
+     height: 10em;
+     margin-left: 2em;
+     text-align: center;
+ }
 
-#right-image {
-    float: right;
-    display: inline-block;
-}
-
-#middle-image{
-    float: right;
-    display: inline-block;  
-}
+ 
